<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingRight="@dimen/main_padding"
    android:paddingLeft="@dimen/main_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_size"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_padding"
        android:paddingBottom="@dimen/setting_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dark_mode"
            android:textColor="@color/text_color"
            android:textSize="@dimen/setting_text_size"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_padding"
        android:paddingBottom="@dimen/setting_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share_app"
            android:textColor="@color/text_color"
            android:textSize="@dimen/setting_text_size"/>

        <ImageView
            android:layout_width="@dimen/setting_icon_size"
            android:layout_height="@dimen/setting_icon_size"
            android:src="@drawable/share"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_padding"
        android:paddingBottom="@dimen/setting_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/write_to_support"
            android:textColor="@color/text_color"
            android:textSize="@dimen/setting_text_size"/>

        <ImageView
            android:layout_width="@dimen/setting_icon_size"
            android:layout_height="@dimen/setting_icon_size"
            android:src="@drawable/support"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_padding"
        android:paddingBottom="@dimen/setting_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/terms_of_use"
            android:textColor="@color/text_color"
            android:textSize="@dimen/setting_text_size"/>

        <ImageView
            android:layout_width="@dimen/setting_icon_size"
            android:layout_height="@dimen/setting_icon_size"
            android:src="@drawable/forward"
            android:layout_gravity="end"/>
    </FrameLayout>

</LinearLayout>